# videorc

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/videorc-release/: SKILL.md
.claude/: launch.json
.claude/plans/: 2026-06-24-page-layout-and-comments-window.md
.claude/skills/videorc-design/: SKILL.md
.claude/skills/videorc-release/: SKILL.md
.github/workflows/: calibrate-macos-release-budget.yml  ci.yml  performance-macos.yml  release-macos.yml  windows.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json
apps/desktop/build-resources/: icon.icns
apps/desktop/scripts/: release-upload.mjs  staple-dmg.mjs
apps/desktop/src/main/: avatar-cache.test.ts  avatar-cache.ts  backend-isolation.test.ts  backend-isolation.ts  backend-owned-processes.test.ts  backend-owned-processes.ts  backend-runtime-owner.test.ts  (+27 more)
changelog/: 0.9.0-beta.1.md  0.9.1-beta.1.md  0.9.16-beta.1.md  0.9.2-beta.1.md  0.9.20-beta.1.md  0.9.21-beta.1.md  0.9.22-beta.1.md  0.9.23-beta.1.md  0.9.24-beta.1.md  0.9.3-beta.1.md  0.9.44-beta.1.md  0.9.5-beta.1.md  0.9.6-beta.1.md  README.md
config/performance-budgets/v1/: README.md  active-budget.schema.json  budget-candidate.schema.json  cross-machine-native-cadence.json
crates/videogre-backend/: Cargo.toml
crates/videogre-backend/src/: ai.rs  main.rs  protocol.rs  recording.rs  state.rs  storage.rs
crates/videorc-backend/: Cargo.toml
crates/videorc-backend/src/: account.rs  ai.rs  audio.rs  camera_capture.rs  captions.rs  capture_input.rs  compositor.rs  devices.rs  diagnostics.rs  encoder_bridge.rs  entitlements.rs  ffmpeg_work.rs  fifo.rs  frame_store.rs  h264_profile.rs  live_chat.rs  live_layout.rs  live_pipeline.rs  live_render.rs  main.rs  metal_compositor.rs  native_preview_host.rs  oauth.rs  posters.rs  preflight.rs  preview_camera.rs  preview_screen.rs  preview_surface.rs  process_job.rs  protocol.rs  recording.rs  repair.rs  repair_service.rs  resource_authority.rs  scene.rs  screen_capture.rs  secrets.rs  session_ops.rs  source_registry.rs  state.rs  (+12 more)
crates/videorc-native-preview-addon/src/: lib.rs
docs/: distribution.md  live-chat-live-smoke-checklist.md  live-video-freeze-incident-plan.md  native-4k-media-engine-refactor.md  native-metal-preview-plan.md  oauth-live-smoke.md  obs-acceptance-checklist.md  preview-recording-parity-slices.md  ui-glass-redesign-plan.md  ui-glass-redesign-slices.md  windows-dev-loop.md  windows-port-plan.md
docs/acceptance/: 2026-06-07-smooth-preview-correct-recording-acceptance.md  2026-07-02-caption-burn-in-b4.md  2026-07-04-docked-preview-stick-acceptance.md  2026-07-05-library-rewrite.md  2026-07-05-post-094-ui-fix-batch.md  2026-07-05-preview-res-tearing.md  2026-07-06-permissions-onboarding.md  windows-app-acceptance-template.md
docs/releases/: 0.9.1.md  0.9.10.md  0.9.12.md  0.9.13.md  0.9.15.md  0.9.16.md  0.9.2.md  0.9.20.md  0.9.21.md  0.9.22.md  0.9.23.md  0.9.24.md  0.9.26.md  0.9.27.md  0.9.30.md  0.9.33.md  0.9.36.md  0.9.4.md  0.9.42.md  0.9.5.md  0.9.6.md  0.9.7.md  release-runbook.md
plans/: 006-true-record-stream-split-output.md  014-guided-audio-sync-calibration.md  015-real-provider-livestream-acceptance.md  018-support-bundle-diagnostics.md  019-windows-v1-follow-through.md  020-google-oauth-secret-remediation.md  024-preview-polish-grant-resilience.md  026-constant-twitch-audio-sync.md  027-silent-product-source-fallbacks.md  028-x-livestream-api-integration.md  029-x-livestream-user-oauth.md  030-x-native-playback-verification.md  031-x-source-hygiene-end-order.md  032-bundled-ffmpeg-rtmps-tls.md  README.md
scripts/: aggregate-performance-calibration.mjs  analyze-startup-resolution.mjs  build-changelog.mjs  build-ffmpeg-macos.sh  cam-grant.mjs  check-real-source-evidence.mjs  check-renderer-asset-budget.mjs  fetch-ffmpeg-windows.mjs  measure-av-sync.mjs  perf-idle-probe.mjs  perf-memory-probe.mjs  perf-renderer-profile.mjs  perf-timeline-count-probe.mjs  performance-budget-preflight.mjs  performance-scenario-runner.mjs  preflight-windows-package.mjs  preview-glue-probe.mjs  preview-lifecycle-probe.mjs  preview-window-probe.mjs  probe-split-flv-capture.mjs  real-source-baseline-app.mjs  smoke-backend-resilience.mjs  smoke-dev-app.mjs  smoke-layout-source-loop-app.mjs  smoke-live-layout-switch-recording-app.mjs  smoke-local-gates-windows.mjs  smoke-oauth-app.mjs  smoke-oauth-guards-app.mjs  smoke-obs-import.mjs  smoke-packaged-app.mjs  smoke-platform-lifecycle.mjs  smoke-preview-motion-app.mjs  smoke-preview-performance-app.mjs  smoke-preview-scene-commit-app.mjs  smoke-preview-surface-app.mjs  smoke-process-lifecycle.mjs  smoke-process-memory.mjs  smoke-provider-readiness.mjs  smoke-recording-matrix-app.mjs  smoke-recording-native-preview-app.mjs  (+15 more)
scripts/lib/: acceptance-gate.mjs  acceptance-gate.test.mjs  app-launcher.mjs  app-launcher.test.mjs  changelog.mjs  changelog.test.mjs  comment-highlight-artifact.mjs  comment-highlight-artifact.test.mjs  compile-capture-module.mjs  detached-preview-calibration.mjs  detached-preview-calibration.test.mjs  final-recording-path.mjs  final-recording-path.test.mjs  macos-release-artifact-validation.mjs  macos-release-artifact-validation.test.mjs  mixed-youtube-4k-twitch-1080p-gate.mjs  mixed-youtube-4k-twitch-1080p-gate.test.mjs  native-preview-claim.mjs  native-preview-claim.test.mjs  native-preview-diagnostics.mjs  native-preview-diagnostics.test.mjs  native-preview-source-gates.mjs  native-preview-source-gates.test.mjs  obs-parity-evidence.mjs  obs-parity-evidence.test.mjs  packaged-smoke-paths.test.mjs  performance-budget-preflight.test.mjs  performance-budget.mjs  performance-budget.test.mjs  performance-calibration.mjs  performance-calibration.test.mjs  performance-contract.mjs  performance-contract.test.mjs  performance-sampling-schedule.mjs  performance-sampling-schedule.test.mjs  performance-scenarios.mjs  performance-scenarios.test.mjs  performance-workflow.test.mjs  process-census.mjs  process-census.test.mjs  (+33 more)
(+151 files in other folders)
